--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/enzyme": "^3.1.13",
+    "@types/react-redux": "^6.0.6",
+    "@types/redux-devtools": "^3.0.44",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts-ts": "2.17.0"
+    "react-redux": "^5.0.7",
+    "react-scripts-ts": "2.17.0",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -15,9 +20,12 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
-    "@types/node": "^10.7.1",
-    "@types/react": "^16.4.11",
+    "@types/node": "^10.5.7",
+    "@types/react": "^16.4.8",
     "@types/react-dom": "^16.0.7",
+    "enzyme": "^3.4.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-saga-devtools": "^0.3.0",
     "typescript": "^3.0.1"
   }
 }
